containerized using docker v1.2